// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EjsAlgorithmRenderer Behavior should render article title and html 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>hello world</title>
  <style>
    body {
      /* CMS authors paste bare URLs as link text (a 118-char Medtronic link in
         the Solitaire procedure demo), and an unbreakable token overflows the
         page. Only breaks words that do not fit. */
      overflow-wrap: break-word;
      font-family: -apple-system, "Segoe UI", Roboto, sans-serif;
      background-color: transparent;
      color: #0B1220;
      font-size: 16px;
      line-height: 1.7;
      -webkit-font-smoothing: antialiased;
    }

    a {
      color: #1E4E8C;
    }

    iframe {
      width: 100%;
      max-width: 100%;
    }

    /* Cap, don't stretch — see the note in partials/style.ejs. */
    img {
      max-width: 100%;
      height: auto;
      border-radius: 10px;
    }

    h1 {
      font-size: 34px;
      font-weight: 700;
      letter-spacing: -0.02em;
      line-height: 1.15;
    }

    h2 {
      font-size: 22px;
      font-weight: 700;
      letter-spacing: -0.01em;
    }

    h3 {
      font-size: 18px;
      font-weight: 700;
    }

    ul,
    ol {
      padding-left: 22px;
    }

    blockquote {
      position: relative;
      margin: 0;
      padding: 16px 32px;
      border-radius: 0 10px 10px 0;
      background-color: #F3F7FB;
    }

    blockquote::before {
      content: '';
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      width: 4px;
      height: 100%;
      background-color: #1E4E8C;
    }

    table {
      border-collapse: collapse;
      border-spacing: 0px;
      border-radius: 10px;
    }

    table,
    th,
    td {
      border: 1px solid #E4E7EB;
    }

    thead {
      background-color: #EAF0F8;
    }

    tr {
      height: 56px;
    }

    thead th {
      color: #0B1220;
    }

    td,
    th {
      padding-left: 16px;
      padding-right: 16px;
      text-align: center;
    }

    details summary::-webkit-details-marker,
    ::marker {
      display: none;
    }

    /* Responsive Page Width */

    @media screen and (min-width: 900px) {
      body {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
      }

      .template.header,
      .template.main,
      .template.citations {
        width: 868px;
      }
    }

    /* Wrappers */

    .table__wrapper {
      width: 100%;
      overflow-x: scroll;
    }

    .iframe__wrapper {
      min-width: 100%;
      min-height: 300px;
    }

    .iframe__wrapper--offline,
    .iframe__wrapper--loading {
      border: 1px dashed #E4E7EB;
      border-radius: 10px;
      position: relative;
    }

    .iframe__wrapper::before {
      text-align: center;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      color: #667085;
      /* body-large */
      line-height: 24px;
      font-size: 16px;
      font-weight: 400;
    }

    .iframe__wrapper--offline::before {
      content: 'Oops! We could not load this embedded element since there is no internet connection.';
    }

    .iframe__wrapper--loading::before {
      content: 'Loading embedded element...';
    }

    .iframe__wrapper--offline iframe,
    .iframe__wrapper--loading iframe {
      visibility: hidden;
    }

    /* Template */

    .template.last-updated {
      display: block;
      align-self: flex-end;
      margin-right: 16px;
      text-align: right;
      color: #667085;
      font-size: 12px;
    }

    .template.citations {
      padding-top: 16px;
    }

    .template.citations__title {
      list-style: none;
      cursor: pointer;
      user-select: none;
      color: #667085;
      /* label-large */
      line-height: 20px;
      font-size: 14px;
      letter-spacing: 0.1px;
      font-weight: 700;
    }

    .template.citations .template.citations__title::before {
      content: "Show "
    }

    .template.citations[open] .template.citations__title::before {
      content: "Hide "
    }

    .template.citations__list {
      margin: 0;
      padding: 0;
      padding-left: 16px;
      list-style: none;
      counter-reset: citations__list;
    }

    .template.citations__item::before {
      content: counter(citations__list) ". ";
      counter-increment: citations__list;
    }

    .template.citations__item {
      margin-top: 16px;
      color: #667085;
      /* body-medium */
      line-height: 1.5;
      font-size: 13px;
      font-weight: 400;
    }
  </style>
</head>

<body>
  <main class="template main"><h1>foo bar</h1></main>
  
  <i class="template last-updated">Last Updated: December 31, 1969</i>
</body>

<script>
  function notifyReactNative(messageType, content) {
    const message = {
      type: messageType,
      content,
    };
    window.ReactNativeWebView.postMessage(JSON.stringify(message));
  }
  const notifyArticleLinkPressed = notifyReactNative.bind(null, 'articlelinkpressed');
  const notifyLinkPressed = notifyReactNative.bind(null, 'linkpressed');
  const notifyError = notifyReactNative.bind(null, 'error');

  ; // Listen to click of any link
  (function() {
    const isArticleLink = (href) => href.slice(0, 8) === 'article:'

    function handleLinkPressed(href) {
      notifyLinkPressed({
        href
      });
    }

    function handleArticleLinkPressed(href) {
      const articleId = href.slice(8)
      notifyArticleLinkPressed({
        articleId
      });
    }

    const links = Array.from(document.querySelectorAll('a[href]'))
    for (const a of links) {
      const href = a.getAttribute('href')
      if (href.slice(0, 1) === '#') continue
      a.addEventListener('click', function(e) {
        e.preventDefault()
        const href = this.getAttribute('href')
        if (isArticleLink(href)) handleArticleLinkPressed(href)
        else handleLinkPressed(href)
      })
    }
  })();

  ; // hide iframes in case of no internet connectivity
  (function() {
    function wrapElement(el, className) {
      const wrapper = document.createElement('div')
      wrapper.className = className
      const newEl = el.cloneNode()
      wrapper.appendChild(newEl)
      el.replaceWith(wrapper)
      return wrapper
    }
    // Snapshot the live HTMLCollection before mutating it: wrapElement replaces
    // each iframe, which would otherwise shift the collection mid-loop. The
    // load listener must go on the CLONE inside the wrapper, since the original
    // has already been detached.
    const frames = Array.from(document.getElementsByTagName('iframe'))
    const wrappedFrames = []
    for (let i = 0; i < frames.length; i++) {
      const wrappedFrame = wrapElement(frames[i], 'iframe__wrapper iframe__wrapper--loading')
      wrappedFrame.querySelector('iframe').addEventListener('load', function() {
        wrappedFrame.classList.remove('iframe__wrapper--loading')
      })
      wrappedFrames.push(wrappedFrame)
    }

    function OnlineState(context) {
      return {
        toOnline: function() {},
        toOffline: function() {
          for (let i = 0; i < wrappedFrames.length; i++) {
            const wrappedFrame = wrappedFrames[i]
            wrappedFrame.classList.add('iframe__wrapper--offline')
          }
          context.state = OfflineState(context)
        }
      }
    }

    function OfflineState(context) {
      return {
        toOnline: function() {
          for (let i = 0; i < wrappedFrames.length; i++) {
            const wrappedFrame = wrappedFrames[i]
            wrappedFrame.classList.remove('iframe__wrapper--offline')
          }
          context.state = OnlineState(context)
        },
        toOffline: function() {}
      }
    }

    function ConnectivityStateManager() {
      const context = {}
      context.state = window.navigator.onLine ? OnlineState(context) : OfflineState(context)

      window.addEventListener('online', function() {
        context.state.toOnline()
      })
      window.addEventListener('offline', function() {
        context.state.toOffline()
      })
      return context
    }

    const stateManager = ConnectivityStateManager()
  })()

  ; // Report errors
  (function() {
    window.addEventListener('error', (e) =>
      notifyError({
        name: e.name,
        message: e.message,
      })
    );
  })();

  ; // Wrap tables with wrapper div
  (function() {
    const tables = Array.from(document.getElementsByTagName('table'))
    tables.forEach(table => {
      const wrapper = document.createElement('div')
      wrapper.className = 'table__wrapper'
      const newTable = table.cloneNode(true)
      wrapper.appendChild(newTable)
      table.replaceWith(wrapper)
    })
  })()
</script>

</html>"
`;

exports[`EjsAlgorithmRenderer Behavior should render disclaimer html 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>hello world</title>
  <style>
    body {
      /* CMS authors paste bare URLs as link text (a 118-char Medtronic link in
         the Solitaire procedure demo), and an unbreakable token overflows the
         page. Only breaks words that do not fit. */
      overflow-wrap: break-word;
      background-color: transparent;
      color: #0B1220;
      font-family: -apple-system, "Segoe UI", Roboto, sans-serif;
      font-size: 16px;
      line-height: 1.7;
      -webkit-font-smoothing: antialiased;
    }

    * {
      margin: 0;
      padding: 0;
      box-sizing: border-box;
      font-family: -apple-system, "Segoe UI", Roboto, sans-serif;
    }

    a {
      color: #1E4E8C;
    }

    h1 {
      margin-bottom: 16px;
      font-size: 34px;
      font-weight: 700;
      letter-spacing: -0.02em;
      line-height: 1.15;
    }

    h2 {
      font-size: 22px;
      font-weight: 700;
      letter-spacing: -0.01em;
    }

    h3 {
      font-size: 18px;
      font-weight: 700;
    }

    p {
      text-align: left;
    }

    ul,
    ol {
      padding-left: 22px;
    }

    iframe {
      width: 100%;
      max-width: 100%;
    }

    /* Cap, don't stretch — see the note in partials/style.ejs. */
    img {
      max-width: 100%;
      height: auto;
      border-radius: 10px;
    }

    .iframe__wrapper {
      min-width: 100%;
      min-height: 300px;
    }

    .iframe__wrapper--offline,
    .iframe__wrapper--loading {
      border: 1px dashed #E4E7EB;
      border-radius: 10px;
      position: relative;
    }

    .iframe__wrapper::before {
      text-align: center;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      color: #667085;
      /* body-large */
      line-height: 24px;
      font-size: 16px;
      font-weight: 400;
    }

    .iframe__wrapper--offline::before {
      content: 'Oops! We could not load this embedded element since there is no internet connection.';
    }

    .iframe__wrapper--loading::before {
      content: 'Loading embedded element...';
    }

    .iframe__wrapper--offline iframe,
    .iframe__wrapper--loading iframe {
      visibility: hidden;
    }
  </style>
</head>

<body>
  <h1>foo bar</h1>

  <script>
    function notifyReactNative(messageType, content) {
      const message = {
        type: messageType,
        content,
      };
      window.ReactNativeWebView.postMessage(JSON.stringify(message));
    }
    const notifyLinkPressed = notifyReactNative.bind(null, 'linkpressed')
    const notifyError = notifyReactNative.bind(null, 'error');
    const notifyLayout = notifyReactNative.bind(null, 'layout');

    ; // Send window size upon load of the window
    (function() {
      function notify() {
        notifyLayout({
          width: document.body.offsetWidth,
          height: document.body.offsetHeight,
        })
      }
      window.addEventListener('load', notify);
      window.addEventListener('resize', notify);
    })();

    ; // Listen to click of any link
    (function() {
      const links = Array.from(document.querySelectorAll('a[href]'))
      for (const a of links) {
        a.addEventListener('click', function(e) {
          e.preventDefault()
          const href = this.getAttribute('href')
          notifyLinkPressed({
            href
          })
        })
      }
    })();

    ; // hide iframes in case of no internet connectivity
    (function() {
      function wrapElement(el, className) {
        const wrapper = document.createElement('div')
        wrapper.className = className
        const newEl = el.cloneNode()
        wrapper.appendChild(newEl)
        el.replaceWith(wrapper)
        return wrapper
      }
      // Snapshot the live HTMLCollection before mutating it: wrapElement replaces
      // each iframe, which would otherwise shift the collection mid-loop. The
      // load listener must go on the CLONE inside the wrapper, since the
      // original has already been detached.
      const frames = Array.from(document.getElementsByTagName('iframe'))
      const wrappedFrames = []
      for (let i = 0; i < frames.length; i++) {
        const wrappedFrame = wrapElement(frames[i], 'iframe__wrapper iframe__wrapper--loading')
        wrappedFrame.querySelector('iframe').addEventListener('load', function() {
          wrappedFrame.classList.remove('iframe__wrapper--loading')
        })
        wrappedFrames.push(wrappedFrame)
      }

      function OnlineState(context) {
        return {
          toOnline: function() {},
          toOffline: function() {
            for (let i = 0; i < wrappedFrames.length; i++) {
              const wrappedFrame = wrappedFrames[i]
              wrappedFrame.classList.add('iframe__wrapper--offline')
            }
            context.state = OfflineState(context)
          }
        }
      }

      function OfflineState(context) {
        return {
          toOnline: function() {
            for (let i = 0; i < wrappedFrames.length; i++) {
              const wrappedFrame = wrappedFrames[i]
              wrappedFrame.classList.remove('iframe__wrapper--offline')
            }
            context.state = OnlineState(context)
          },
          toOffline: function() {}
        }
      }

      function ConnectivityStateManager() {
        const context = {}
        context.state = window.navigator.onLine ? OnlineState(context) : OfflineState(context)

        window.addEventListener('online', function() {
          context.state.toOnline()
        })
        window.addEventListener('offline', function() {
          context.state.toOffline()
        })
        return context
      }

      const stateManager = ConnectivityStateManager()
    })()

    ; // Report errors
    (function() {
      window.addEventListener('error', (e) =>
        notifyError({
          name: e.name,
          message: e.message,
        })
      );
    })();
  </script>
</body>

</html>"
`;

exports[`EjsAlgorithmRenderer Behavior should render scored algorithm 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="UTF-8">
<meta http-equiv="X-UA-Compatible" content="IE=edge">
<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  <style>
  body {
    margin: 0 16px;
    /* CMS authors paste bare URLs as link text (a 118-char Medtronic link in
       the Solitaire procedure demo), and an unbreakable token overflows the
       page. Only breaks words that do not fit. */
    overflow-wrap: break-word;
    padding: 0;
    font-family: -apple-system, "Segoe UI", Roboto, sans-serif;
    background-color: transparent;
    color: #0B1220;
    font-size: 16px;
    line-height: 1.7;
    -webkit-font-smoothing: antialiased;
  }

  a {
    color: #1E4E8C;
  }

  iframe {
    width: 100%;
    max-width: 100%;
  }

  /* A cap, not a used width. \`width: 100%\` upscaled small images past their
     intrinsic size (a 575px asset rendered 830px on a tablet) and was ignored
     in every intrinsic-sizing context — table cells, the flex switch labels,
     and the shrink-to-fit tooltip — where a wide image escaped the page.
     \`height: auto\` also neutralises the \`height\` attribute that
     sanitizeCmsHtml allows through, which would otherwise distort the ratio. */
  img {
    max-width: 100%;
    height: auto;
    border-radius: 10px;
  }

  h1 {
    font-size: 34px;
    font-weight: 700;
    letter-spacing: -0.02em;
    line-height: 1.15;
  }

  h2 {
    font-size: 22px;
    font-weight: 700;
    letter-spacing: -0.01em;
  }

  h3 {
    font-size: 18px;
    font-weight: 700;
  }

  ul,
  ol {
    padding-left: 22px;
  }

  blockquote {
    position: relative;
    margin: 0;
    padding: 16px 32px;
    border-radius: 0 10px 10px 0;
    background-color: #F3F7FB;
  }

  blockquote::before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 4px;
    height: 100%;
    background-color: #1E4E8C;
  }

  table {
    border-collapse: collapse;
    border-spacing: 0px;
    border-radius: 10px;
  }

  table,
  th,
  td {
    border: 1px solid #E4E7EB;
  }

  thead {
    background-color: #EAF0F8;
  }

  tr {
    height: 56px;
  }

  thead th {
    color: #0B1220;
  }

  td,
  th {
    padding-left: 16px;
    padding-right: 16px;
    text-align: center;
  }

  details summary::-webkit-details-marker,
  ::marker {
    display: none;
  }

  /* Responsive Page Width */

  @media screen and (min-width: 900px) {
    body {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }

    .template.header,
    .template.main,
    .template.citations {
      width: 868px;
    }
  }

  /* Wrapper */

  .table__wrapper {
    width: 100%;
    overflow-x: scroll;
  }

  /* Template */

  .template {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }

  .template.switches__list,
  .template.outcomes__list {
    list-style: none;
    padding: 0;
  }

  .template.header__title {
    margin: 0;
    padding-top: 16px;
    /* screen title */
    line-height: 1.2;
    font-size: 28px;
    letter-spacing: -0.02em;
    font-weight: 700;
  }

  .template.body__paragraph {
    margin-top: 16px;
    /* body-large */
    line-height: 1.7;
    font-size: 16px;
    font-weight: 400;
  }

  .template.switches__list {
    margin-top: 16px;
  }

  .template.switches__list-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 8px;
    user-select: none;
    position: relative;
    /* Flex items default to min-width:auto, so a replaced child's intrinsic
       width would push the row past the viewport instead of shrinking. */
    min-width: 0;
  }

  /* NOT the group label: flooring it at min-content is what keeps a long
     single-word label (Thrombocytopenia, Hyperlipidaemia) from being sliced by
     the level chips, which paint over it. An image in a label is already
     contained by img{max-width:100%}, which transfers into the automatic
     minimum size on its own. */
  .template.switches__radiogroup {
    min-width: 0;
  }

  .template.switches__list-item:first-child {
    padding-top: 0;
  }

  .template.switches__tooltip {
    display: none;
    position: absolute;
    top: 100%;
    /* Absolutely positioned, so shrink-to-fit: without a cap a wide replaced
       child sets the width from its intrinsic size and overflows the page.
       The tooltip is also outside the flow, so it never contributes to
       body.offsetHeight and can never be measured — keep it text-sized. */
    left: 0;
    max-width: 100%;
    box-sizing: border-box;
    background-color: #0B1220;
    color: #FFFFFF;
    padding: 8px 12px;
    border-radius: 10px;
    z-index: 999;
    /* body-small */
    line-height: 16px;
    font-size: 12px;
    letter-spacing: 0.4px;
    font-weight: 400;
  }

  .template.switches__group-label--has-description::after {
    content: 'ⓘ';
    display: inline-block;
    margin-left: 4px;
  }

  .template.switches__tooltip-select {
    height: 0px;
    width: 0px;
    visibility: transparent;
  }

  .template.switches__tooltip-select:checked+.template.switches__tooltip {
    display: block;
  }

  .template.switches__input {
    height: 0px;
    width: 0px;
    visibility: hidden;
  }

  .template.switches__group-label {
    /* title-medium */
    line-height: 24px;
    font-size: 14px;
    font-weight: 600;
    color: #0B1220;
  }

  .template.switches__radio-label {
    /* label-large */
    line-height: 20px;
    font-size: 13px;
    font-weight: 500;
  }

  .template.switches__radiogroup {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 6px;
  }

  .template.switches__level {
    border-radius: 10px;
    border: 1px solid #E4E7EB;
    background-color: #FFFFFF;
    color: #475467;
  }

  .template.switches__level--checked {
    background-color: #1E4E8C;
    border-color: #1E4E8C;
    color: white;
    box-shadow: 0 0 0 3px #EAF0F8;
  }

  .template.switches__radio-label {
    display: inline-block;
    min-width: 44px;
    padding: 8px 14px;
    text-align: center;
  }

  .template.outcomes__list {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .template.outcomes__headline {
    margin: 0;
    margin-top: 16px;
    /* title-medium */
    line-height: 24px;
    font-size: 16px;
    letter-spacing: -0.01em;
    font-weight: 600;
    color: #0B1220;
  }

  .template.outcomes__list-item {
    margin-top: 10px;
  }

  .template.outcomes__title {
    /* card title */
    line-height: 24px;
    font-size: 15px;
    letter-spacing: -0.005em;
    font-weight: 600;
    color: #0B1220;
  }

  .template.outcomes__item {
    padding: 16px 18px;
    border: 1px solid #E4E7EB;
    border-radius: 10px;
    background-color: #FFFFFF;
  }

  .template.outcomes__item>summary {
    list-style: none;
  }

  .template.outcomes__item[open] {
    border-color: #667085;
    box-shadow: 0 4px 8px -2px rgba(16, 24, 40, .06), 0 2px 4px -2px rgba(16, 24, 40, .04);
  }

  .template.outcomes__item .template.outcomes__title {
    color: #0B1220;
  }

  .template.outcomes__item[open] .template.outcomes__title {
    color: #0B1220;
  }

  .template.outcomes__item--empty {
    background-color: transparent;
    border-style: dashed;
  }

  .template.outcomes__body {
    margin-top: 14px;
    padding-top: 14px;
    border-top: 1px solid #EEF0F3;
  }

  .template.outcomes__button {
    background-color: #1E4E8C;
    color: white;
    border-radius: 10px;
    border: 1px solid #1E4E8C;
    height: 40px;
    padding: 0 18px;
    margin-top: 16px;
    /* label-large */
    line-height: 20px;
    font-size: 14px;
    font-weight: 600;
  }

  .iframe__wrapper {
    min-width: 100%;
    min-height: 300px;
  }

  .iframe__wrapper--offline,
  .iframe__wrapper--loading {
    border: 1px dashed #E4E7EB;
    border-radius: 10px;
    position: relative;
  }

  .iframe__wrapper::before {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #667085;
    /* body-large */
    line-height: 24px;
    font-size: 16px;
    font-weight: 400;
  }

  .iframe__wrapper--offline::before {
    content: 'Oops! We could not load this embedded element since there is no internet connection.';
  }

  .iframe__wrapper--loading::before {
    content: 'Loading embedded element...';
  }

  .iframe__wrapper--offline iframe,
  .iframe__wrapper--loading iframe {
    visibility: hidden;
  }

  .template.last-updated {
    display: block;
    align-self: flex-end;
    margin-right: 16px;
    margin-top: 16px;
    text-align: right;
    color: #667085;
    font-size: 12px;
  }

  .template.citations {
    padding-top: 16px;
  }

  .template.citations__title {
    list-style: none;
    cursor: pointer;
    user-select: none;
    color: #667085;
    /* label-large */
    line-height: 20px;
    font-size: 14px;
    letter-spacing: 0.1px;
    font-weight: 700;
  }

  .template.citations .template.citations__title::before {
    content: "Show "
  }

  .template.citations[open] .template.citations__title::before {
    content: "Hide "
  }

  .template.citations__list {
    margin: 0;
    padding: 0;
    padding-left: 16px;
    list-style: none;
    counter-reset: citations__list;
  }

  .template.citations__item::before {
    content: counter(citations__list) ". ";
    counter-increment: citations__list;
  }

  .template.citations__item {
    margin-top: 16px;
    color: #667085;
    /* body-medium */
    line-height: 1.5;
    font-size: 13px;
    font-weight: 400;
  }
</style>
</head>

<body>
  <header class="template header">
    <h1 class="template header__title">GWNS</h1>
  </header>
  <main class="template main">
    <p class="template body__paragraph">
      All need immediate Rx and activate brain attack team immediately. ABCT = (airway, breathing, circulation, time of stroke onset). Endotracheal intubation if compromised airway or GCS less than eight. Maintain SBP 140 to 180 mmHg. HR 60-100. Establish IV access and hydration is recommended based on height/weight and clinical scenarios
    </p>
    <ul class="template switches__list">
      
      <li class="template switches__list-item">
        <label for="switches__tooltip-select--0" class="template switches__group-label ">
          Gaze Deviation
        </label>
        
        <div class="template switches__radiogroup">
          
          <div class="template switches__level ">
            <input class="template switches__input switches__input--yes" name="switch-0" id="switch-0-yes" type="radio"  data-switch-id="0" data-level-id="yes">
            <label class="template switches__radio-label switches__radio-label--yes" for="switch-0-yes">
              Yes
            </label>
          </div>
          
          <div class="template switches__level ">
            <input class="template switches__input switches__input--no" name="switch-0" id="switch-0-no" type="radio"  data-switch-id="0" data-level-id="no">
            <label class="template switches__radio-label switches__radio-label--no" for="switch-0-no">
              No
            </label>
          </div>
          
        </div>
      </li>
      
      <li class="template switches__list-item">
        <label for="switches__tooltip-select--1" class="template switches__group-label ">
          Weakness
        </label>
        
        <div class="template switches__radiogroup">
          
          <div class="template switches__level ">
            <input class="template switches__input switches__input--yes" name="switch-1" id="switch-1-yes" type="radio"  data-switch-id="1" data-level-id="yes">
            <label class="template switches__radio-label switches__radio-label--yes" for="switch-1-yes">
              Yes
            </label>
          </div>
          
          <div class="template switches__level ">
            <input class="template switches__input switches__input--no" name="switch-1" id="switch-1-no" type="radio"  data-switch-id="1" data-level-id="no">
            <label class="template switches__radio-label switches__radio-label--no" for="switch-1-no">
              No
            </label>
          </div>
          
        </div>
      </li>
      
      <li class="template switches__list-item">
        <label for="switches__tooltip-select--2" class="template switches__group-label ">
          Neglect/Disregard/Extinction
        </label>
        
        <div class="template switches__radiogroup">
          
          <div class="template switches__level ">
            <input class="template switches__input switches__input--yes" name="switch-2" id="switch-2-yes" type="radio"  data-switch-id="2" data-level-id="yes">
            <label class="template switches__radio-label switches__radio-label--yes" for="switch-2-yes">
              Yes
            </label>
          </div>
          
          <div class="template switches__level ">
            <input class="template switches__input switches__input--no" name="switch-2" id="switch-2-no" type="radio"  data-switch-id="2" data-level-id="no">
            <label class="template switches__radio-label switches__radio-label--no" for="switch-2-no">
              No
            </label>
          </div>
          
        </div>
      </li>
      
      <li class="template switches__list-item">
        <label for="switches__tooltip-select--3" class="template switches__group-label ">
          Speech impairment
        </label>
        
        <div class="template switches__radiogroup">
          
          <div class="template switches__level ">
            <input class="template switches__input switches__input--yes" name="switch-3" id="switch-3-yes" type="radio"  data-switch-id="3" data-level-id="yes">
            <label class="template switches__radio-label switches__radio-label--yes" for="switch-3-yes">
              Yes
            </label>
          </div>
          
          <div class="template switches__level ">
            <input class="template switches__input switches__input--no" name="switch-3" id="switch-3-no" type="radio"  data-switch-id="3" data-level-id="no">
            <label class="template switches__radio-label switches__radio-label--no" for="switch-3-no">
              No
            </label>
          </div>
          
        </div>
      </li>
      
    </ul>
    <ul class="template outcomes__list">
  <h1 class="template outcomes__headline">Results</h1>
  
  <li class="template outcomes__list-item">
  <div class="template outcomes__item--empty outcomes__item">
    Results will appear here when all fields of the algorithm have been filled.
  </div>
</li>
  
</ul>

  </main>
  
  <details class="template citations">
    <summary class="template citations__title">Citations</summary>
    <ol class="template citations__list">
      
      <li class="template citations__item">My GWNS Citation</li>
      
    </ol>
  </details>
  
  <i class="template last-updated">Last Updated: December 31, 1969</i>
  <script>
  function notifyReactNative(messageType, content) {
    const message = {
      type: messageType,
      content,
    };
    window.ReactNativeWebView.postMessage(JSON.stringify(message));
  }
  const notifyLayout = notifyReactNative.bind(null, 'layout');
  const notifySwitchChanged = notifyReactNative.bind(null, 'switchchanged');
  const notifyError = notifyReactNative.bind(null, 'error');
  const notifyNextPressed = notifyReactNative.bind(null, 'nextpressed');
  const notifyLinkPressed = notifyReactNative.bind(null, 'linkpressed');
  const notifyArticleLinkPressed = notifyReactNative.bind(null, 'articlelinkpressed');
  const notifyLog = function(msg) {
    notifyReactNative('log', {
      message: msg
    })
  }

  ; // Report window height
  (function() {
    // The native container is a fixed-height box with scrolling disabled, so
    // anything taller than the last height reported here is clipped outright.
    // CMS images arrive as bare <img src alt> with no dimensions, which means
    // they occupy zero height until their bytes land — every measurement taken
    // before then is short by the image's full rendered height.
    let lastHeight = -1;

    const notify = () => {
      lastHeight = document.body.offsetHeight;
      notifyLayout({
        width: document.body.offsetWidth,
        height: lastHeight,
      });
    };

    // Each message re-renders the native view, and the observers below fire on
    // every reflow, so only an actual change is worth crossing the bridge for.
    const notifyIfChanged = () => {
      if (document.body.offsetHeight === lastHeight) return;
      notify();
    };

    // Coalesce a burst of reflows (several images completing together) into one
    // measurement taken after layout has settled.
    let scheduled = false;
    const scheduleNotify = () => {
      if (scheduled) return;
      scheduled = true;
      const run = () => {
        scheduled = false;
        notifyIfChanged();
      };
      if (typeof requestAnimationFrame === 'function') requestAnimationFrame(run);
      else setTimeout(run, 16);
    };

    // Re-measure as each image resolves. Waiting only for window 'load' leaves
    // the view clipped for as long as the slowest image is in flight, and an
    // image revealed later (an expanded outcome on a cold cache) is not covered
    // by 'load' at all. Tracked in a WeakSet rather than a data attribute: the
    // table wrapper below deep-clones its tables, and a marker attribute would
    // be copied onto the clone and make it look already-watched.
    const watched = new WeakSet();
    const watchImage = (img) => {
      if (watched.has(img)) return;
      watched.add(img);
      if (img.complete) return;
      img.addEventListener('load', scheduleNotify);
      img.addEventListener('error', scheduleNotify);
    };
    const watchImagesIn = (node) => {
      if (!node || node.nodeType !== 1) return;
      if (node.tagName === 'IMG') watchImage(node);
      Array.prototype.forEach.call(node.querySelectorAll('img'), watchImage);
    };

    // Watch for opening of outcome dropdowns
    const bodyEl = document.querySelector('body')
    const observerCb = (mutationList) => {
      mutationList.forEach(mut => {
        if (mut.type === 'childList') {
          // The table and iframe wrappers replace nodes after this runs, so
          // images can arrive detached from the ones scanned at startup.
          Array.prototype.forEach.call(mut.addedNodes, watchImagesIn);
          return;
        }
        if (mut.type !== 'attributes') return;
        if (mut.attributeName === 'open') scheduleNotify();
      })
    }
    const observer = new MutationObserver(observerCb)
    observer.observe(bodyEl, {
      attributes: true,
      childList: true,
      subtree: true
    })

    watchImagesIn(bodyEl);

    // Catch-all for growth no event above accounts for: web fonts swapping in,
    // a table wrapper gaining a scrollbar gutter, content injected later.
    if (typeof ResizeObserver === 'function') {
      new ResizeObserver(scheduleNotify).observe(bodyEl);
    }

    // In case of window resizing
    window.addEventListener('resize', scheduleNotify)

    // Wait for any images to finish loading
    window.addEventListener('load', scheduleNotify)
    notify()
  })();

  ; // Listen to changes in switch values
  (function() {
    const inputs = Array.from(document.querySelectorAll('.template.switches__input'));
    for (const input of inputs) {
      input.addEventListener('change', ({
        target
      }) => {
        const id = target.dataset.switchId;
        const levelId = target.dataset.levelId;

        notifySwitchChanged({
          id,
          levelId,
        });
      });
    }
  })();

  ; // Listen to click of next algorithm button
  (function() {
    const buttons = Array.from(document.querySelectorAll('.template.outcomes__button'));
    for (const button of buttons) {
      button.addEventListener('click', ({
        target
      }) => {
        const id = target.getAttribute('data-next-id');
        notifyNextPressed({
          id
        });
      });
    }
  })();

  ; // Wrap tables with wrapper div
  (function() {
    const tables = Array.from(document.getElementsByTagName('table'))
    tables.forEach(table => {
      const wrapper = document.createElement('div')
      wrapper.className = 'table__wrapper'
      const newTable = table.cloneNode(true)
      wrapper.appendChild(newTable)
      table.replaceWith(wrapper)
    })
  })()

  ; // Listen to click of any link
  (function() {
    const isArticleLink = (href) => href.slice(0, 8) === 'article:'

    function handleLinkPressed(href) {
      notifyLinkPressed({
        href
      });
    }

    function handleArticleLinkPressed(href) {
      const articleId = href.slice(8)
      notifyArticleLinkPressed({
        articleId
      });
    }

    const links = Array.from(document.querySelectorAll('a[href]'))
    for (const a of links) {
      const href = a.getAttribute('href')
      if (href.slice(0, 1) === '#') continue
      a.addEventListener('click', function(e) {
        e.preventDefault()
        const href = this.getAttribute('href')
        if (isArticleLink(href)) handleArticleLinkPressed(href)
        else handleLinkPressed(href)
      })
    }
  })();

  ; // Report errors
  (function() {
    window.addEventListener('error', (e) =>
      notifyError({
        name: e.error.name,
        message: e.message,
      })
    );
  })();

  ; // Clear tooltip on click out
  (function() {
    const ignoreList = document.querySelectorAll('.template.switches__tooltip, .template.switches__group-label, .template.switches__tooltip-select')
    const selects = document.querySelectorAll('.template.switches__tooltip-select')

    document.body.addEventListener('click', (e) => {
      for (const el of selects) {
        el.checked = false
      }
    })
    Array.from(ignoreList).forEach(el => {
      el.addEventListener('click', (e) => e.stopPropagation())
    })
  })()

  ; // hide iframes in case of no internet connectivity
  (function() {
    function wrapElement(el, className) {
      const wrapper = document.createElement('div')
      wrapper.className = className
      const newEl = el.cloneNode()
      wrapper.appendChild(newEl)
      el.replaceWith(wrapper)
      return wrapper
    }
    // Snapshot the live HTMLCollection before mutating it: wrapElement replaces
    // each iframe, which would otherwise shift the collection mid-loop.
    const frames = Array.from(document.getElementsByTagName('iframe'))
    const wrappedFrames = []
    for (let i = 0; i < frames.length; i++) {
      const wrappedFrame = wrapElement(frames[i], 'iframe__wrapper iframe__wrapper--loading')
      wrappedFrame.querySelector('iframe').addEventListener('load', function() {
        wrappedFrame.classList.remove('iframe__wrapper--loading')
      })
      wrappedFrames.push(wrappedFrame)
    }

    function OnlineState(context) {
      return {
        toOnline: function() {},
        toOffline: function() {
          for (let i = 0; i < wrappedFrames.length; i++) {
            const wrappedFrame = wrappedFrames[i]
            wrappedFrame.classList.add('iframe__wrapper--offline')
          }
          context.state = OfflineState(context)
        }
      }
    }

    function OfflineState(context) {
      return {
        toOnline: function() {
          for (let i = 0; i < wrappedFrames.length; i++) {
            const wrappedFrame = wrappedFrames[i]
            wrappedFrame.classList.remove('iframe__wrapper--offline')
          }
          context.state = OnlineState(context)
        },
        toOffline: function() {}
      }
    }

    function ConnectivityStateManager() {
      const context = {}
      context.state = window.navigator.onLine ? OnlineState(context) : OfflineState(context)

      window.addEventListener('online', function() {
        context.state.toOnline()
      })
      window.addEventListener('offline', function() {
        context.state.toOffline()
      })
      return context
    }

    const stateManager = ConnectivityStateManager()
  })()
</script>
</body>

</html>"
`;

exports[`EjsAlgorithmRenderer Behavior should render text algorithm 1`] = `
"<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="UTF-8">
<meta http-equiv="X-UA-Compatible" content="IE=edge">
<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  <style>
  body {
    margin: 0 16px;
    /* CMS authors paste bare URLs as link text (a 118-char Medtronic link in
       the Solitaire procedure demo), and an unbreakable token overflows the
       page. Only breaks words that do not fit. */
    overflow-wrap: break-word;
    padding: 0;
    font-family: -apple-system, "Segoe UI", Roboto, sans-serif;
    background-color: transparent;
    color: #0B1220;
    font-size: 16px;
    line-height: 1.7;
    -webkit-font-smoothing: antialiased;
  }

  a {
    color: #1E4E8C;
  }

  iframe {
    width: 100%;
    max-width: 100%;
  }

  /* A cap, not a used width. \`width: 100%\` upscaled small images past their
     intrinsic size (a 575px asset rendered 830px on a tablet) and was ignored
     in every intrinsic-sizing context — table cells, the flex switch labels,
     and the shrink-to-fit tooltip — where a wide image escaped the page.
     \`height: auto\` also neutralises the \`height\` attribute that
     sanitizeCmsHtml allows through, which would otherwise distort the ratio. */
  img {
    max-width: 100%;
    height: auto;
    border-radius: 10px;
  }

  h1 {
    font-size: 34px;
    font-weight: 700;
    letter-spacing: -0.02em;
    line-height: 1.15;
  }

  h2 {
    font-size: 22px;
    font-weight: 700;
    letter-spacing: -0.01em;
  }

  h3 {
    font-size: 18px;
    font-weight: 700;
  }

  ul,
  ol {
    padding-left: 22px;
  }

  blockquote {
    position: relative;
    margin: 0;
    padding: 16px 32px;
    border-radius: 0 10px 10px 0;
    background-color: #F3F7FB;
  }

  blockquote::before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 4px;
    height: 100%;
    background-color: #1E4E8C;
  }

  table {
    border-collapse: collapse;
    border-spacing: 0px;
    border-radius: 10px;
  }

  table,
  th,
  td {
    border: 1px solid #E4E7EB;
  }

  thead {
    background-color: #EAF0F8;
  }

  tr {
    height: 56px;
  }

  thead th {
    color: #0B1220;
  }

  td,
  th {
    padding-left: 16px;
    padding-right: 16px;
    text-align: center;
  }

  details summary::-webkit-details-marker,
  ::marker {
    display: none;
  }

  /* Responsive Page Width */

  @media screen and (min-width: 900px) {
    body {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }

    .template.header,
    .template.main,
    .template.citations {
      width: 868px;
    }
  }

  /* Wrapper */

  .table__wrapper {
    width: 100%;
    overflow-x: scroll;
  }

  /* Template */

  .template {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }

  .template.switches__list,
  .template.outcomes__list {
    list-style: none;
    padding: 0;
  }

  .template.header__title {
    margin: 0;
    padding-top: 16px;
    /* screen title */
    line-height: 1.2;
    font-size: 28px;
    letter-spacing: -0.02em;
    font-weight: 700;
  }

  .template.body__paragraph {
    margin-top: 16px;
    /* body-large */
    line-height: 1.7;
    font-size: 16px;
    font-weight: 400;
  }

  .template.switches__list {
    margin-top: 16px;
  }

  .template.switches__list-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 8px;
    user-select: none;
    position: relative;
    /* Flex items default to min-width:auto, so a replaced child's intrinsic
       width would push the row past the viewport instead of shrinking. */
    min-width: 0;
  }

  /* NOT the group label: flooring it at min-content is what keeps a long
     single-word label (Thrombocytopenia, Hyperlipidaemia) from being sliced by
     the level chips, which paint over it. An image in a label is already
     contained by img{max-width:100%}, which transfers into the automatic
     minimum size on its own. */
  .template.switches__radiogroup {
    min-width: 0;
  }

  .template.switches__list-item:first-child {
    padding-top: 0;
  }

  .template.switches__tooltip {
    display: none;
    position: absolute;
    top: 100%;
    /* Absolutely positioned, so shrink-to-fit: without a cap a wide replaced
       child sets the width from its intrinsic size and overflows the page.
       The tooltip is also outside the flow, so it never contributes to
       body.offsetHeight and can never be measured — keep it text-sized. */
    left: 0;
    max-width: 100%;
    box-sizing: border-box;
    background-color: #0B1220;
    color: #FFFFFF;
    padding: 8px 12px;
    border-radius: 10px;
    z-index: 999;
    /* body-small */
    line-height: 16px;
    font-size: 12px;
    letter-spacing: 0.4px;
    font-weight: 400;
  }

  .template.switches__group-label--has-description::after {
    content: 'ⓘ';
    display: inline-block;
    margin-left: 4px;
  }

  .template.switches__tooltip-select {
    height: 0px;
    width: 0px;
    visibility: transparent;
  }

  .template.switches__tooltip-select:checked+.template.switches__tooltip {
    display: block;
  }

  .template.switches__input {
    height: 0px;
    width: 0px;
    visibility: hidden;
  }

  .template.switches__group-label {
    /* title-medium */
    line-height: 24px;
    font-size: 14px;
    font-weight: 600;
    color: #0B1220;
  }

  .template.switches__radio-label {
    /* label-large */
    line-height: 20px;
    font-size: 13px;
    font-weight: 500;
  }

  .template.switches__radiogroup {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 6px;
  }

  .template.switches__level {
    border-radius: 10px;
    border: 1px solid #E4E7EB;
    background-color: #FFFFFF;
    color: #475467;
  }

  .template.switches__level--checked {
    background-color: #1E4E8C;
    border-color: #1E4E8C;
    color: white;
    box-shadow: 0 0 0 3px #EAF0F8;
  }

  .template.switches__radio-label {
    display: inline-block;
    min-width: 44px;
    padding: 8px 14px;
    text-align: center;
  }

  .template.outcomes__list {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .template.outcomes__headline {
    margin: 0;
    margin-top: 16px;
    /* title-medium */
    line-height: 24px;
    font-size: 16px;
    letter-spacing: -0.01em;
    font-weight: 600;
    color: #0B1220;
  }

  .template.outcomes__list-item {
    margin-top: 10px;
  }

  .template.outcomes__title {
    /* card title */
    line-height: 24px;
    font-size: 15px;
    letter-spacing: -0.005em;
    font-weight: 600;
    color: #0B1220;
  }

  .template.outcomes__item {
    padding: 16px 18px;
    border: 1px solid #E4E7EB;
    border-radius: 10px;
    background-color: #FFFFFF;
  }

  .template.outcomes__item>summary {
    list-style: none;
  }

  .template.outcomes__item[open] {
    border-color: #667085;
    box-shadow: 0 4px 8px -2px rgba(16, 24, 40, .06), 0 2px 4px -2px rgba(16, 24, 40, .04);
  }

  .template.outcomes__item .template.outcomes__title {
    color: #0B1220;
  }

  .template.outcomes__item[open] .template.outcomes__title {
    color: #0B1220;
  }

  .template.outcomes__item--empty {
    background-color: transparent;
    border-style: dashed;
  }

  .template.outcomes__body {
    margin-top: 14px;
    padding-top: 14px;
    border-top: 1px solid #EEF0F3;
  }

  .template.outcomes__button {
    background-color: #1E4E8C;
    color: white;
    border-radius: 10px;
    border: 1px solid #1E4E8C;
    height: 40px;
    padding: 0 18px;
    margin-top: 16px;
    /* label-large */
    line-height: 20px;
    font-size: 14px;
    font-weight: 600;
  }

  .iframe__wrapper {
    min-width: 100%;
    min-height: 300px;
  }

  .iframe__wrapper--offline,
  .iframe__wrapper--loading {
    border: 1px dashed #E4E7EB;
    border-radius: 10px;
    position: relative;
  }

  .iframe__wrapper::before {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #667085;
    /* body-large */
    line-height: 24px;
    font-size: 16px;
    font-weight: 400;
  }

  .iframe__wrapper--offline::before {
    content: 'Oops! We could not load this embedded element since there is no internet connection.';
  }

  .iframe__wrapper--loading::before {
    content: 'Loading embedded element...';
  }

  .iframe__wrapper--offline iframe,
  .iframe__wrapper--loading iframe {
    visibility: hidden;
  }

  .template.last-updated {
    display: block;
    align-self: flex-end;
    margin-right: 16px;
    margin-top: 16px;
    text-align: right;
    color: #667085;
    font-size: 12px;
  }

  .template.citations {
    padding-top: 16px;
  }

  .template.citations__title {
    list-style: none;
    cursor: pointer;
    user-select: none;
    color: #667085;
    /* label-large */
    line-height: 20px;
    font-size: 14px;
    letter-spacing: 0.1px;
    font-weight: 700;
  }

  .template.citations .template.citations__title::before {
    content: "Show "
  }

  .template.citations[open] .template.citations__title::before {
    content: "Hide "
  }

  .template.citations__list {
    margin: 0;
    padding: 0;
    padding-left: 16px;
    list-style: none;
    counter-reset: citations__list;
  }

  .template.citations__item::before {
    content: counter(citations__list) ". ";
    counter-increment: citations__list;
  }

  .template.citations__item {
    margin-top: 16px;
    color: #667085;
    /* body-medium */
    line-height: 1.5;
    font-size: 13px;
    font-weight: 400;
  }
</style>
</head>

<body>
  <header class="template header">
    <h1 class="template header__title">ABCTs</h1>
  </header>
  <main class="template main">
    <p class="template body__paragraph">
      <img src="https://placeimg.com/640/480/any" height="100"><ul><li>airway</li><li>breathing</li><li>circulation</li><li>time of stroke onset</li><a href="google.com">google</a></ul>
    </p>
    <ul class="template outcomes__list">
  <h1 class="template outcomes__headline">Results</h1>
  
  
  <li class="template outcomes__list-item">
    <details class="template outcomes__item" >
      <summary><span class="template outcomes__title">Stable<span></summary>
      <div class="template outcomes__body">Proceed to GWNS algorithm</div>
      
      <button class="template outcomes__button" data-next-id="1">
        Continue
      </button>
      
      
    </details>
  </li>
  
  <li class="template outcomes__list-item">
    <details class="template outcomes__item" >
      <summary><span class="template outcomes__title">Not Stable<span></summary>
      <div class="template outcomes__body">Stabilize ABCTs before continuing!</div>
      
      
      
      
      <button class="template outcomes__button" data-next-id="__finish__:1">
        Complete &amp; view summary
      </button>
      
      
    </details>
  </li>
  
  
</ul>

  </main>
  
  <details class="template citations">
    <summary class="template citations__title">Citations</summary>
    <ol class="template citations__list">
      
      <li class="template citations__item">My ABCT Citation 1</li>
      
      <li class="template citations__item">My ABCT Citation 2</li>
      
    </ol>
  </details>
  
  <i class="template last-updated">Last Updated: December 31, 1969</i>
  <script>
  function notifyReactNative(messageType, content) {
    const message = {
      type: messageType,
      content,
    };
    window.ReactNativeWebView.postMessage(JSON.stringify(message));
  }
  const notifyLayout = notifyReactNative.bind(null, 'layout');
  const notifySwitchChanged = notifyReactNative.bind(null, 'switchchanged');
  const notifyError = notifyReactNative.bind(null, 'error');
  const notifyNextPressed = notifyReactNative.bind(null, 'nextpressed');
  const notifyLinkPressed = notifyReactNative.bind(null, 'linkpressed');
  const notifyArticleLinkPressed = notifyReactNative.bind(null, 'articlelinkpressed');
  const notifyLog = function(msg) {
    notifyReactNative('log', {
      message: msg
    })
  }

  ; // Report window height
  (function() {
    // The native container is a fixed-height box with scrolling disabled, so
    // anything taller than the last height reported here is clipped outright.
    // CMS images arrive as bare <img src alt> with no dimensions, which means
    // they occupy zero height until their bytes land — every measurement taken
    // before then is short by the image's full rendered height.
    let lastHeight = -1;

    const notify = () => {
      lastHeight = document.body.offsetHeight;
      notifyLayout({
        width: document.body.offsetWidth,
        height: lastHeight,
      });
    };

    // Each message re-renders the native view, and the observers below fire on
    // every reflow, so only an actual change is worth crossing the bridge for.
    const notifyIfChanged = () => {
      if (document.body.offsetHeight === lastHeight) return;
      notify();
    };

    // Coalesce a burst of reflows (several images completing together) into one
    // measurement taken after layout has settled.
    let scheduled = false;
    const scheduleNotify = () => {
      if (scheduled) return;
      scheduled = true;
      const run = () => {
        scheduled = false;
        notifyIfChanged();
      };
      if (typeof requestAnimationFrame === 'function') requestAnimationFrame(run);
      else setTimeout(run, 16);
    };

    // Re-measure as each image resolves. Waiting only for window 'load' leaves
    // the view clipped for as long as the slowest image is in flight, and an
    // image revealed later (an expanded outcome on a cold cache) is not covered
    // by 'load' at all. Tracked in a WeakSet rather than a data attribute: the
    // table wrapper below deep-clones its tables, and a marker attribute would
    // be copied onto the clone and make it look already-watched.
    const watched = new WeakSet();
    const watchImage = (img) => {
      if (watched.has(img)) return;
      watched.add(img);
      if (img.complete) return;
      img.addEventListener('load', scheduleNotify);
      img.addEventListener('error', scheduleNotify);
    };
    const watchImagesIn = (node) => {
      if (!node || node.nodeType !== 1) return;
      if (node.tagName === 'IMG') watchImage(node);
      Array.prototype.forEach.call(node.querySelectorAll('img'), watchImage);
    };

    // Watch for opening of outcome dropdowns
    const bodyEl = document.querySelector('body')
    const observerCb = (mutationList) => {
      mutationList.forEach(mut => {
        if (mut.type === 'childList') {
          // The table and iframe wrappers replace nodes after this runs, so
          // images can arrive detached from the ones scanned at startup.
          Array.prototype.forEach.call(mut.addedNodes, watchImagesIn);
          return;
        }
        if (mut.type !== 'attributes') return;
        if (mut.attributeName === 'open') scheduleNotify();
      })
    }
    const observer = new MutationObserver(observerCb)
    observer.observe(bodyEl, {
      attributes: true,
      childList: true,
      subtree: true
    })

    watchImagesIn(bodyEl);

    // Catch-all for growth no event above accounts for: web fonts swapping in,
    // a table wrapper gaining a scrollbar gutter, content injected later.
    if (typeof ResizeObserver === 'function') {
      new ResizeObserver(scheduleNotify).observe(bodyEl);
    }

    // In case of window resizing
    window.addEventListener('resize', scheduleNotify)

    // Wait for any images to finish loading
    window.addEventListener('load', scheduleNotify)
    notify()
  })();

  ; // Listen to changes in switch values
  (function() {
    const inputs = Array.from(document.querySelectorAll('.template.switches__input'));
    for (const input of inputs) {
      input.addEventListener('change', ({
        target
      }) => {
        const id = target.dataset.switchId;
        const levelId = target.dataset.levelId;

        notifySwitchChanged({
          id,
          levelId,
        });
      });
    }
  })();

  ; // Listen to click of next algorithm button
  (function() {
    const buttons = Array.from(document.querySelectorAll('.template.outcomes__button'));
    for (const button of buttons) {
      button.addEventListener('click', ({
        target
      }) => {
        const id = target.getAttribute('data-next-id');
        notifyNextPressed({
          id
        });
      });
    }
  })();

  ; // Wrap tables with wrapper div
  (function() {
    const tables = Array.from(document.getElementsByTagName('table'))
    tables.forEach(table => {
      const wrapper = document.createElement('div')
      wrapper.className = 'table__wrapper'
      const newTable = table.cloneNode(true)
      wrapper.appendChild(newTable)
      table.replaceWith(wrapper)
    })
  })()

  ; // Listen to click of any link
  (function() {
    const isArticleLink = (href) => href.slice(0, 8) === 'article:'

    function handleLinkPressed(href) {
      notifyLinkPressed({
        href
      });
    }

    function handleArticleLinkPressed(href) {
      const articleId = href.slice(8)
      notifyArticleLinkPressed({
        articleId
      });
    }

    const links = Array.from(document.querySelectorAll('a[href]'))
    for (const a of links) {
      const href = a.getAttribute('href')
      if (href.slice(0, 1) === '#') continue
      a.addEventListener('click', function(e) {
        e.preventDefault()
        const href = this.getAttribute('href')
        if (isArticleLink(href)) handleArticleLinkPressed(href)
        else handleLinkPressed(href)
      })
    }
  })();

  ; // Report errors
  (function() {
    window.addEventListener('error', (e) =>
      notifyError({
        name: e.error.name,
        message: e.message,
      })
    );
  })();

  ; // Clear tooltip on click out
  (function() {
    const ignoreList = document.querySelectorAll('.template.switches__tooltip, .template.switches__group-label, .template.switches__tooltip-select')
    const selects = document.querySelectorAll('.template.switches__tooltip-select')

    document.body.addEventListener('click', (e) => {
      for (const el of selects) {
        el.checked = false
      }
    })
    Array.from(ignoreList).forEach(el => {
      el.addEventListener('click', (e) => e.stopPropagation())
    })
  })()

  ; // hide iframes in case of no internet connectivity
  (function() {
    function wrapElement(el, className) {
      const wrapper = document.createElement('div')
      wrapper.className = className
      const newEl = el.cloneNode()
      wrapper.appendChild(newEl)
      el.replaceWith(wrapper)
      return wrapper
    }
    // Snapshot the live HTMLCollection before mutating it: wrapElement replaces
    // each iframe, which would otherwise shift the collection mid-loop.
    const frames = Array.from(document.getElementsByTagName('iframe'))
    const wrappedFrames = []
    for (let i = 0; i < frames.length; i++) {
      const wrappedFrame = wrapElement(frames[i], 'iframe__wrapper iframe__wrapper--loading')
      wrappedFrame.querySelector('iframe').addEventListener('load', function() {
        wrappedFrame.classList.remove('iframe__wrapper--loading')
      })
      wrappedFrames.push(wrappedFrame)
    }

    function OnlineState(context) {
      return {
        toOnline: function() {},
        toOffline: function() {
          for (let i = 0; i < wrappedFrames.length; i++) {
            const wrappedFrame = wrappedFrames[i]
            wrappedFrame.classList.add('iframe__wrapper--offline')
          }
          context.state = OfflineState(context)
        }
      }
    }

    function OfflineState(context) {
      return {
        toOnline: function() {
          for (let i = 0; i < wrappedFrames.length; i++) {
            const wrappedFrame = wrappedFrames[i]
            wrappedFrame.classList.remove('iframe__wrapper--offline')
          }
          context.state = OnlineState(context)
        },
        toOffline: function() {}
      }
    }

    function ConnectivityStateManager() {
      const context = {}
      context.state = window.navigator.onLine ? OnlineState(context) : OfflineState(context)

      window.addEventListener('online', function() {
        context.state.toOnline()
      })
      window.addEventListener('offline', function() {
        context.state.toOffline()
      })
      return context
    }

    const stateManager = ConnectivityStateManager()
  })()
</script>
</body>

</html>"
`;
